parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> module
Rule 1     module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements ENDMODULE
Rule 2     id_list -> IDENTIFIER
Rule 3     id_list -> id_list COMMA IDENTIFIER
Rule 4     declarations -> declaration
Rule 5     declarations -> declarations declaration
Rule 6     declaration -> INPUT id_list SEMI
Rule 7     declaration -> OUTPUT id_list SEMI
Rule 8     declaration -> WIRE id_list SEMI
Rule 9     statements -> statement
Rule 10    statements -> statements statement
Rule 11    statement -> ASSIGN IDENTIFIER ASSIGN_OP expression SEMI
Rule 12    expression -> expression AND_OP expression
Rule 13    expression -> expression OR_OP expression
Rule 14    expression -> NOT_OP expression
Rule 15    expression -> IDENTIFIER
Rule 16    expression -> NUMBER

Terminals, with rules where they appear

AND_OP               : 12
ASSIGN               : 11
ASSIGN_OP            : 11
COMMA                : 3
ENDMODULE            : 1
IDENTIFIER           : 1 2 3 11 15
INPUT                : 6
LPAREN               : 1
MODULE               : 1
NOT_OP               : 14
NUMBER               : 16
OR_OP                : 13
OUTPUT               : 7
RPAREN               : 1
SEMI                 : 1 6 7 8 11
WIRE                 : 8
error                : 

Nonterminals, with rules where they appear

declaration          : 4 5
declarations         : 1 5
expression           : 11 12 12 13 13 14
id_list              : 1 3 6 7 8
module               : 0
statement            : 9 10
statements           : 1 10

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements ENDMODULE

    MODULE          shift and go to state 2

    module                         shift and go to state 1

state 1

    (0) S' -> module .



state 2

    (1) module -> MODULE . IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements ENDMODULE

    IDENTIFIER      shift and go to state 3


state 3

    (1) module -> MODULE IDENTIFIER . LPAREN id_list RPAREN SEMI declarations statements ENDMODULE

    LPAREN          shift and go to state 4


state 4

    (1) module -> MODULE IDENTIFIER LPAREN . id_list RPAREN SEMI declarations statements ENDMODULE
    (2) id_list -> . IDENTIFIER
    (3) id_list -> . id_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 5

    id_list                        shift and go to state 6

state 5

    (2) id_list -> IDENTIFIER .

    RPAREN          reduce using rule 2 (id_list -> IDENTIFIER .)
    COMMA           reduce using rule 2 (id_list -> IDENTIFIER .)
    SEMI            reduce using rule 2 (id_list -> IDENTIFIER .)


state 6

    (1) module -> MODULE IDENTIFIER LPAREN id_list . RPAREN SEMI declarations statements ENDMODULE
    (3) id_list -> id_list . COMMA IDENTIFIER

    RPAREN          shift and go to state 7
    COMMA           shift and go to state 8


state 7

    (1) module -> MODULE IDENTIFIER LPAREN id_list RPAREN . SEMI declarations statements ENDMODULE

    SEMI            shift and go to state 9


state 8

    (3) id_list -> id_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 10


state 9

    (1) module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI . declarations statements ENDMODULE
    (4) declarations -> . declaration
    (5) declarations -> . declarations declaration
    (6) declaration -> . INPUT id_list SEMI
    (7) declaration -> . OUTPUT id_list SEMI
    (8) declaration -> . WIRE id_list SEMI

    INPUT           shift and go to state 13
    OUTPUT          shift and go to state 14
    WIRE            shift and go to state 15

    declarations                   shift and go to state 11
    declaration                    shift and go to state 12

state 10

    (3) id_list -> id_list COMMA IDENTIFIER .

    RPAREN          reduce using rule 3 (id_list -> id_list COMMA IDENTIFIER .)
    COMMA           reduce using rule 3 (id_list -> id_list COMMA IDENTIFIER .)
    SEMI            reduce using rule 3 (id_list -> id_list COMMA IDENTIFIER .)


state 11

    (1) module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations . statements ENDMODULE
    (5) declarations -> declarations . declaration
    (9) statements -> . statement
    (10) statements -> . statements statement
    (6) declaration -> . INPUT id_list SEMI
    (7) declaration -> . OUTPUT id_list SEMI
    (8) declaration -> . WIRE id_list SEMI
    (11) statement -> . ASSIGN IDENTIFIER ASSIGN_OP expression SEMI

    INPUT           shift and go to state 13
    OUTPUT          shift and go to state 14
    WIRE            shift and go to state 15
    ASSIGN          shift and go to state 19

    statements                     shift and go to state 16
    declaration                    shift and go to state 17
    statement                      shift and go to state 18

state 12

    (4) declarations -> declaration .

    INPUT           reduce using rule 4 (declarations -> declaration .)
    OUTPUT          reduce using rule 4 (declarations -> declaration .)
    WIRE            reduce using rule 4 (declarations -> declaration .)
    ASSIGN          reduce using rule 4 (declarations -> declaration .)


state 13

    (6) declaration -> INPUT . id_list SEMI
    (2) id_list -> . IDENTIFIER
    (3) id_list -> . id_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 5

    id_list                        shift and go to state 20

state 14

    (7) declaration -> OUTPUT . id_list SEMI
    (2) id_list -> . IDENTIFIER
    (3) id_list -> . id_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 5

    id_list                        shift and go to state 21

state 15

    (8) declaration -> WIRE . id_list SEMI
    (2) id_list -> . IDENTIFIER
    (3) id_list -> . id_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 5

    id_list                        shift and go to state 22

state 16

    (1) module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements . ENDMODULE
    (10) statements -> statements . statement
    (11) statement -> . ASSIGN IDENTIFIER ASSIGN_OP expression SEMI

    ENDMODULE       shift and go to state 23
    ASSIGN          shift and go to state 19

    statement                      shift and go to state 24

state 17

    (5) declarations -> declarations declaration .

    INPUT           reduce using rule 5 (declarations -> declarations declaration .)
    OUTPUT          reduce using rule 5 (declarations -> declarations declaration .)
    WIRE            reduce using rule 5 (declarations -> declarations declaration .)
    ASSIGN          reduce using rule 5 (declarations -> declarations declaration .)


state 18

    (9) statements -> statement .

    ENDMODULE       reduce using rule 9 (statements -> statement .)
    ASSIGN          reduce using rule 9 (statements -> statement .)


state 19

    (11) statement -> ASSIGN . IDENTIFIER ASSIGN_OP expression SEMI

    IDENTIFIER      shift and go to state 25


state 20

    (6) declaration -> INPUT id_list . SEMI
    (3) id_list -> id_list . COMMA IDENTIFIER

    SEMI            shift and go to state 26
    COMMA           shift and go to state 8


state 21

    (7) declaration -> OUTPUT id_list . SEMI
    (3) id_list -> id_list . COMMA IDENTIFIER

    SEMI            shift and go to state 27
    COMMA           shift and go to state 8


state 22

    (8) declaration -> WIRE id_list . SEMI
    (3) id_list -> id_list . COMMA IDENTIFIER

    SEMI            shift and go to state 28
    COMMA           shift and go to state 8


state 23

    (1) module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements ENDMODULE .

    $end            reduce using rule 1 (module -> MODULE IDENTIFIER LPAREN id_list RPAREN SEMI declarations statements ENDMODULE .)


state 24

    (10) statements -> statements statement .

    ENDMODULE       reduce using rule 10 (statements -> statements statement .)
    ASSIGN          reduce using rule 10 (statements -> statements statement .)


state 25

    (11) statement -> ASSIGN IDENTIFIER . ASSIGN_OP expression SEMI

    ASSIGN_OP       shift and go to state 29


state 26

    (6) declaration -> INPUT id_list SEMI .

    INPUT           reduce using rule 6 (declaration -> INPUT id_list SEMI .)
    OUTPUT          reduce using rule 6 (declaration -> INPUT id_list SEMI .)
    WIRE            reduce using rule 6 (declaration -> INPUT id_list SEMI .)
    ASSIGN          reduce using rule 6 (declaration -> INPUT id_list SEMI .)


state 27

    (7) declaration -> OUTPUT id_list SEMI .

    INPUT           reduce using rule 7 (declaration -> OUTPUT id_list SEMI .)
    OUTPUT          reduce using rule 7 (declaration -> OUTPUT id_list SEMI .)
    WIRE            reduce using rule 7 (declaration -> OUTPUT id_list SEMI .)
    ASSIGN          reduce using rule 7 (declaration -> OUTPUT id_list SEMI .)


state 28

    (8) declaration -> WIRE id_list SEMI .

    INPUT           reduce using rule 8 (declaration -> WIRE id_list SEMI .)
    OUTPUT          reduce using rule 8 (declaration -> WIRE id_list SEMI .)
    WIRE            reduce using rule 8 (declaration -> WIRE id_list SEMI .)
    ASSIGN          reduce using rule 8 (declaration -> WIRE id_list SEMI .)


state 29

    (11) statement -> ASSIGN IDENTIFIER ASSIGN_OP . expression SEMI
    (12) expression -> . expression AND_OP expression
    (13) expression -> . expression OR_OP expression
    (14) expression -> . NOT_OP expression
    (15) expression -> . IDENTIFIER
    (16) expression -> . NUMBER

    NOT_OP          shift and go to state 32
    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 33

    expression                     shift and go to state 31

state 30

    (15) expression -> IDENTIFIER .

    SEMI            reduce using rule 15 (expression -> IDENTIFIER .)
    AND_OP          reduce using rule 15 (expression -> IDENTIFIER .)
    OR_OP           reduce using rule 15 (expression -> IDENTIFIER .)


state 31

    (11) statement -> ASSIGN IDENTIFIER ASSIGN_OP expression . SEMI
    (12) expression -> expression . AND_OP expression
    (13) expression -> expression . OR_OP expression

    SEMI            shift and go to state 34
    AND_OP          shift and go to state 35
    OR_OP           shift and go to state 36


state 32

    (14) expression -> NOT_OP . expression
    (12) expression -> . expression AND_OP expression
    (13) expression -> . expression OR_OP expression
    (14) expression -> . NOT_OP expression
    (15) expression -> . IDENTIFIER
    (16) expression -> . NUMBER

    NOT_OP          shift and go to state 32
    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 33

    expression                     shift and go to state 37

state 33

    (16) expression -> NUMBER .

    SEMI            reduce using rule 16 (expression -> NUMBER .)
    AND_OP          reduce using rule 16 (expression -> NUMBER .)
    OR_OP           reduce using rule 16 (expression -> NUMBER .)


state 34

    (11) statement -> ASSIGN IDENTIFIER ASSIGN_OP expression SEMI .

    ENDMODULE       reduce using rule 11 (statement -> ASSIGN IDENTIFIER ASSIGN_OP expression SEMI .)
    ASSIGN          reduce using rule 11 (statement -> ASSIGN IDENTIFIER ASSIGN_OP expression SEMI .)


state 35

    (12) expression -> expression AND_OP . expression
    (12) expression -> . expression AND_OP expression
    (13) expression -> . expression OR_OP expression
    (14) expression -> . NOT_OP expression
    (15) expression -> . IDENTIFIER
    (16) expression -> . NUMBER

    NOT_OP          shift and go to state 32
    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 33

    expression                     shift and go to state 38

state 36

    (13) expression -> expression OR_OP . expression
    (12) expression -> . expression AND_OP expression
    (13) expression -> . expression OR_OP expression
    (14) expression -> . NOT_OP expression
    (15) expression -> . IDENTIFIER
    (16) expression -> . NUMBER

    NOT_OP          shift and go to state 32
    IDENTIFIER      shift and go to state 30
    NUMBER          shift and go to state 33

    expression                     shift and go to state 39

state 37

    (14) expression -> NOT_OP expression .
    (12) expression -> expression . AND_OP expression
    (13) expression -> expression . OR_OP expression

  ! shift/reduce conflict for AND_OP resolved as shift
  ! shift/reduce conflict for OR_OP resolved as shift
    SEMI            reduce using rule 14 (expression -> NOT_OP expression .)
    AND_OP          shift and go to state 35
    OR_OP           shift and go to state 36

  ! AND_OP          [ reduce using rule 14 (expression -> NOT_OP expression .) ]
  ! OR_OP           [ reduce using rule 14 (expression -> NOT_OP expression .) ]


state 38

    (12) expression -> expression AND_OP expression .
    (12) expression -> expression . AND_OP expression
    (13) expression -> expression . OR_OP expression

  ! shift/reduce conflict for AND_OP resolved as shift
  ! shift/reduce conflict for OR_OP resolved as shift
    SEMI            reduce using rule 12 (expression -> expression AND_OP expression .)
    AND_OP          shift and go to state 35
    OR_OP           shift and go to state 36

  ! AND_OP          [ reduce using rule 12 (expression -> expression AND_OP expression .) ]
  ! OR_OP           [ reduce using rule 12 (expression -> expression AND_OP expression .) ]


state 39

    (13) expression -> expression OR_OP expression .
    (12) expression -> expression . AND_OP expression
    (13) expression -> expression . OR_OP expression

  ! shift/reduce conflict for AND_OP resolved as shift
  ! shift/reduce conflict for OR_OP resolved as shift
    SEMI            reduce using rule 13 (expression -> expression OR_OP expression .)
    AND_OP          shift and go to state 35
    OR_OP           shift and go to state 36

  ! AND_OP          [ reduce using rule 13 (expression -> expression OR_OP expression .) ]
  ! OR_OP           [ reduce using rule 13 (expression -> expression OR_OP expression .) ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for AND_OP in state 37 resolved as shift
WARNING: shift/reduce conflict for OR_OP in state 37 resolved as shift
WARNING: shift/reduce conflict for AND_OP in state 38 resolved as shift
WARNING: shift/reduce conflict for OR_OP in state 38 resolved as shift
WARNING: shift/reduce conflict for AND_OP in state 39 resolved as shift
WARNING: shift/reduce conflict for OR_OP in state 39 resolved as shift
